qa: domain records, spatial-union fix, Sonar cleanup, coverage, javadocs
Convert Lombok @Value classes in domain and authorization-api to Java
records; drop Cloneable and unneeded Serializable; prefer Stream.toList
and typed variables over var.

Fix AuthorizationServiceImpl.setAllowedAreas to match the expected semantics:
the geometry-union helper must return null when either operand is null so
the caller can leave the spatial restriction unset when one rule grants
unrestricted access. Use LinkedHashMap for per-role grouping so iteration
is deterministic. Warn when resolveRuleset drops accumulated LIMITs.

Refactor unionAttributes to O(n+m). Add AccessType.lenient as the mirror
of stricter for OR-of-rules merging.

Apply a batch of Sonar fixes across the codebase. Move
AuthorizationServiceImpl to .authorization.impl to fix the split package.

Improve test coverage for spatial-union edge cases, unionAttributes
single-side branches, and AccessType.lenient. Add a coverage-report module
that aggregates JaCoCo (mvn -Dcoverage verify). Fill in missing
class-level javadocs and record-component docs.

on-behalf-of: @multiversio <info@multivers.io>